
[TestTablePresenter - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY 
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  Low       
package-2  2.2.2                        deb   CVE-1999-0002  Critical  

---

[TestEmptyTablePresenter - 1]
No vulnerabilities found

---

[TestHidesIgnoredMatches - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY 
package-1  1.1.1                        rpm   CVE-1999-0002  Critical  
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  Low       

---

[TestDisplaysIgnoredMatches - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY                     
package-1  1.1.1                        rpm   CVE-1999-0002  Critical                      
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  Low                           
package-2  2.2.2                        deb   CVE-1999-0004  Critical (suppressed by VEX)  
package-2  2.2.2                        deb   CVE-1999-0002  Critical (suppressed)         
package-2  2.2.2                        deb   CVE-1999-0001  Low (suppressed)              

---
